<?xml version="1.0"?>
<package format="2">
  <name>rl_path_planner</name>
  <version>1.0.0</version>
  <description>Handles localized actions to plan and follow trajectories.</description>

  <maintainer email="autonomy@purdue.edu">Autonomous Robotics Club of Purdue</maintainer>
  <license>BSD 3 Clause</license>
  <url type="website">https://www.purduearc.com</url>
  <author email="dgerblic@purdue.edu">Daniel Gerblick</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>